<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">e-wonder app</string>
    <string name="app_version">Version 1.0.0</string>
    <string name="copyright">Copyright © 2020 rutuja shinde. \nAll right reserved</string>

    <!--AdMob-->
    <string name="admob_publisher_id">pub-3940256099942544</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_banner_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_interstitial_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_native_unit_id">ca-app-pub-3940256099942544/2247696110</string>

    <!-- youtube -->
    <string name="youtube_api_key">AIzaSyCbehD6DCeDZHaGl8SUWKh1koTiHwKcvKY</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>

    <!-- play store application link i.e more apps -->
    <string name="play_more_apps">https://play.google.com/store/apps/developer?id=DeveloperName</string>
    <string name="privacy_policy_url">https://privacypolicies.com/privacy/view/c51c78f03631c7591d817e9d0c30c84c</string>

    <!--share-->
    <string name="share_content">I Would like to share this with you. Here You Can Download This Application from PlayStore</string>

    <!--favorite-->
    <string name="whops">Whoops!</string>
    <string name="favorite_added">Added to Favorite</string>
    <string name="favorite_removed">Removed from Favorite</string>
    <string name="no_favorite_found">Your favorite list is empty because you don\'t add any news in the favorite menu.</string>

    <!--comments-->
    <string name="title_comments">Comments</string>
    <string name="txt_no_comment">Write your first comment&#8230;</string>
    <string name="msg_no_comment">no comments yet, write your first comment.</string>
    <string name="comment_hint">Write your comment&#8230;</string>
    <string name="confirm_send_comment">Send this comment?</string>
    <string name="confirm_delete_comment">Are you sure want to delete your comment?</string>
    <string name="sending_comment">Sending comment&#8230;</string>
    <string name="updating_comment">Updating comment&#8230;</string>
    <string name="msg_comment_success">You have successfully posted a comment</string>
    <string name="msg_comment_failed">Failed post comment!</string>
    <string name="msg_comment_update">Your comment successfully updated</string>
    <string name="msg_update_comment_failed">Failed update comment</string>
    <string name="msg_comment_approval">Thank you, your comments will be reviewed soon and will be displayed immediately after getting approval.</string>
    <string name="msg_write_comment">Please write your message first&#8230;</string>
    <string name="msg_write_comment_character">your message at least 6 character&#8230;</string>
    <string name="btn_update">UPDATE</string>
    <string name="hint_update_comment">Update Comment</string>
    <string name="txt_read">Read</string>
    <string name="txt_comment">Comment</string>
    <string name="txt_comments">Comments</string>
    <string name="txt_you">you</string>
    <string name="txt_title_update_comment">Update Comment</string>
    <string name="txt_dialog_edit">Edit</string>
    <string name="txt_dialog_delete">Delete</string>
    <string name="txt_dialog_reply">Reply</string>

    <!--register-->
    <string name="register_title">Thanks for Register</string>
    <string name="register_success">Register successfully&#8230;</string>
    <string name="register_process">Registering your account&#8230;</string>
    <string name="register_exist">Email address already used!</string>
    <string name="terms_text">By creating an account, you agree with our</string>
    <string name="terms_n_privacy">Terms &amp; Privacy</string>
    <string name="title_please_wait">Please Wait&#8230;</string>
    <string name="already_have_account">Already have an account?</string>

    <!--login-->
    <string name="login_title">Good Job!</string>
    <string name="login_process">Processing login to your account&#8230;</string>
    <string name="login_success">Login Successfully&#8230;</string>
    <string name="login_failed">Invalid Email or Password!</string>
    <string name="login_disabled">Account has been disabled, please contact administrator to enable your account</string>
    <string name="do_not_have_account">Don\'t have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="txt_login_now">LOGIN NOW</string>

    <!--logout-->
    <string name="logout_title">Logout</string>
    <string name="logout_message">Are you sure want to logout?</string>
    <string name="logout_process">Processing logout to your account&#8230;</string>
    <string name="logout_success">Logout Successfully</string>

    <!--forgot password-->
    <string name="forgot_message">Enter the email that used during registration.</string>
    <string name="forgot_failed_message">Email is not found in our database!</string>
    <string name="forgot_success_message">Password has been sent on your mail!</string>
    <string name="forgot_password">Forgot Password?</string>

    <!--permission-->
    <string name="permission_msg">Need Permissions</string>
    <string name="permission_upload">This app needs access storage to upload your profile photo</string>
    <string name="download_msg">Downloading&#8230;</string>
    <string name="download_success">Image has been downloaded and saved on gallery.</string>

    <!-- toolbar and title-->
    <string name="title_menu_profile">Profile</string>
    <string name="title_menu_edit_profile">Edit Profile</string>
    <string name="title_menu_close">Close</string>
    <string name="title_menu_save">Save</string>
    <string name="title_menu_later">Favorite</string>
    <string name="title_menu_share">Share</string>
    <string name="title_menu_search">Search&#8230;</string>
    <string name="title_menu_browser">Open In Browser</string>
    <string name="title_login">LOGIN</string>
    <string name="title_register">REGISTER</string>
    <string name="title_forgot_password">FORGOT PASSWORD</string>
    <string name="txt_suggested"></string>

    <!--bottom navigation title-->
    <string name="title_nav_home">Latest</string>
    <string name="title_nav_category">Course</string>
    <string name="title_nav_video">Video</string>
    <string name="title_nav_favorite">Favorite</string>

    <!--about information-->
    <string name="title_about_theme">Dark Theme</string>
    <string name="title_about_privacy">Privacy Policy</string>
    <string name="title_about_rate">Rate Us</string>
    <string name="title_about_more">More Apps</string>
    <string name="title_about_info">About</string>
    <string name="sub_title_about_theme">Better for eyesight and battery life</string>
    <string name="sub_title_about_privacy">App Terms &amp; Policies</string>
    <string name="sub_title_about_rate">Leave a review on the Google Play</string>
    <string name="sub_title_about_more">More apps from developer</string>
    <string name="sub_title_about_info">App Info, Build Version, Copyright</string>

    <!--network message-->
    <string name="offline">You\'re offline</string>
    <string name="msg_offline">The next time you\'re online, try saving some news to favorite that you can read without an Internet connection.</string>
    <string name="msg_no_news">Oops, it looks like there are no news available for this category at this time.</string>
    <string name="msg_no_category">Oops, No Category Found!</string>
    <string name="msg_no_news_found">Oops, No News Found! if you want to continue search, please try enter another keyword!</string>
    <string name="msg_no_network">Oops, there is something problem with your network or the server is currently down, please try it again later.</string>
    <string name="msg_search_input">Please Fill Search Input</string>
    <string name="btn_retry">RETRY</string>

    <!--dialog choose option-->
    <string name="dialog_success">Success!</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_read_more">Read More</string>
    <string name="dialog_dismiss">Dismiss</string>
    <string name="dialog_settings">GOTO SETTINGS</string>

    <!--dialog close app-->
    <string name="dialog_close_title">Thank You</string>
    <string name="dialog_close_msg">Thank you for using our app, please give us your suggestions or feedback</string>
    <string name="dialog_option_quit">QUIT</string>
    <string name="dialog_option_rate_us">RATE US</string>
    <string name="dialog_option_more">MORE APPS</string>
    <string name="press_again_to_exit">Press again to exit app</string>

    <!--form-->
    <string name="edt_name">Name</string>
    <string name="edt_email">Email</string>
    <string name="edt_password">Password</string>

    <!--button-->
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_send">SEND</string>

    <!--profile-->
    <string name="txt_profile_welcome">Welcome!</string>
    <string name="txt_profile_not_registered">Not registered?</string>
    <string name="txt_profile_register_now">Register Now</string>
    <string name="txt_profile_login">LOGIN</string>
    <string name="updating_profile">Updating Profile</string>
    <string name="success_updating_profile">Update Successfully</string>
    <string name="waiting_message">Please wait&#8230;</string>

    <!--package validation-->
    <string name="msg_validate">Unfortunately, your applicationId or package name is not registered.\n\nplease login to your admin panel and register your applicationId or package name in settings menu in the admin panel to continue using app.</string>

</resources>
