<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="#F3EFEF"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/heder"
        android:layout_height="150dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical">

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/adca"
                app:riv_corner_radius="0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/title_login"
                android:textColor="#A5150B"
                android:textSize="20sp"
                android:textStyle="bold" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_edt_email"
                    android:drawableStart="@drawable/ic_edt_email"
                    android:drawablePadding="12dp"
                    android:hint="@string/edt_email"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_edt_password"
                    android:drawableStart="@drawable/ic_edt_password"
                    android:drawablePadding="12dp"
                    android:hint="@string/edt_password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txt_forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="?attr/selectableItemBackground"
                android:padding="5dp"
                android:text="@string/forgot_password"
                android:textColor="#C61407"
                android:textStyle="bold"
                android:visibility="visible" />

        </LinearLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mrl_rippleAlpha="0.2"
            android:paddingTop="20dp"
            app:mrl_rippleColor="@color/colorRipple"
            app:mrl_rippleHover="true"
            app:mrl_rippleOverlay="true">

            <Button
                android:id="@+id/btn_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/bg_button_background"
                android:text="@string/btn_login"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

        </com.balysv.materialripple.MaterialRippleLayout>

        <LinearLayout
            android:id="@+id/lyt_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:text="@string/do_not_have_account" />

            <Button
                android:id="@+id/btn_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="5dp"
                android:background="@android:color/transparent"
                android:foreground="?attr/selectableItemBackground"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/register_now"
                android:textColor="#A8160C"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>